[tool.poetry]
name = "tanki"
version = "0.1.0"
description = "Dendy tanks inspired survival game."
repository = "https://github.com/pkulev/tanki"
authors = ["Pavel Kulyov <kulyov.pavel@gmail.com>"]
license = "MIT"
readme = "README.org"
keywords = ["hy", "lisp", "raylib", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Lisp",
]

include = ["assets"]

[tool.poetry.scripts]
tanki = "tanki.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
hy = "^0.20.0"
# hy = {version = "1.0a3", allow-prereleases = true}
funcparserlib = {version = "1.0.0a0", allow-prereleases = true}
raylib = "3.7.0.post10"
raylib-dynamic = "^3.7.0-post10"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
jedhy = "^1"
HyREPL = "^0.1.1"
Nuitka = "^0.6.17"
pyinstaller = "^4.5.1"
poetry-exec-plugin = "^0.3.1"

[tool.poetry-exec-plugin.commands]
build-macos = """\
    pyinstaller --onedir \
                --noconsole \
                --noconfirm \
                --clean \
                --workpath .temp \
                --distpath build/macos \
                --name thetanki \
                --additional-hooks-dir pyinstaller-hooks \
                --add-data 'tanki/game.hy:tanki' \
                --add-data 'tanki/background.hy:tanki' \
                --add-data 'tanki/player.hy:tanki' \
                --add-data 'tanki/level.hy:tanki' \
                --add-data 'tanki/common.hy:tanki' \
                --add-data 'tanki/obstacles.hy:tanki' \
                --add-data 'tanki/ui.hy:tanki' \
                --add-data 'assets:assets' \
                --collect-all raylib \
                --collect-all pyray \
                tanki/__main__.py \
"""
run = "build/macos/thetanki/thetanki"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
