[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tanki"
version = "0.1.0"
description = "Dendy tanks inspired survival game."
authors = [{name = "Pavel Kulyov", email = "kulyov.pavel@gmail.com"}]
license = {text = "MIT"}
readme = "README.rst"

keywords = ["hy", "lisp", "raylib", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Lisp",
]

requires-python = ">=3.10"
dependencies = [
    "hy==1.0.0",
    "hyrule==0.7.0",
    "hscp==0.1.0",
    "raylib==4.5.0.0",
    "raylib-dynamic==4.5.0.0",
]

[project.urls]
repository = "https://github.com/pkulev/tanki"

[project.scripts]
tanki = "tanki.__main__:main"

[project.optional-dependencies]
dev = [
    "pyinstaller==6.11.1",
    "poethepoet==0.32.0",
]

[tool.setuptools.packages.find]
include = ["tanki", "tanki.*", "assets"]

[tool.poe.tasks.build-macos]
help = "build the thing for macos"
shell = """\
    pyinstaller --onedir \
                --noconsole \
                --noconfirm \
                --clean \
                --workpath .temp \
                --distpath build/macos \
                --name thetanki \
                --additional-hooks-dir pyinstaller-hooks \
                --add-data 'tanki/game.hy:tanki' \
                --add-data 'tanki/background.hy:tanki' \
                --add-data 'tanki/player.hy:tanki' \
                --add-data 'tanki/level.hy:tanki' \
                --add-data 'tanki/common.hy:tanki' \
                --add-data 'tanki/controls.hy:tanki' \
                --add-data 'tanki/obstacles.hy:tanki' \
                --add-data 'tanki/ui.hy:tanki' \
                --add-data 'assets:assets' \
                --collect-all hyrule \
                --collect-all raylib \
                --collect-all pyray \
                tanki/__main__.py \
"""

[tool.poe.tasks.run-macos]
cmd = "build/macos/thetanki/thetanki"

[tool.poe.tasks.build-linux]
shell = """\
    pyinstaller --onedir \
                --noconsole \
                --noconfirm \
                --clean \
                --workpath .temp \
                --distpath build/linux \
                --name thetanki \
                --additional-hooks-dir pyinstaller-hooks \
                --add-data 'tanki/game.hy:tanki' \
                --add-data 'tanki/background.hy:tanki' \
                --add-data 'tanki/player.hy:tanki' \
                --add-data 'tanki/level.hy:tanki' \
                --add-data 'tanki/common.hy:tanki' \
                --add-data 'tanki/controls.hy:tanki' \
                --add-data 'tanki/obstacles.hy:tanki' \
                --add-data 'tanki/ui.hy:tanki' \
                --add-data 'assets:assets' \
                --collect-all hyrule \
                --collect-all raylib \
                --collect-all pyray \
                tanki/__main__.py \
"""

[tool.poe.tasks.run-linux]
cmd = "build/linux/thetanki/thetanki"

[tool.poe.tasks.build-windows]
shell = """\
    pyinstaller --onedir \
                --noconsole \
                --noconfirm \
                --clean \
                --workpath .temp \
                --distpath build/windows \
                --name thetanki \
                --additional-hooks-dir pyinstaller-hooks \
                --add-data 'tanki/game.hy;tanki' \
                --add-data 'tanki/background.hy;tanki' \
                --add-data 'tanki/player.hy;tanki' \
                --add-data 'tanki/level.hy;tanki' \
                --add-data 'tanki/common.hy;tanki' \
                --add-data 'tanki/controls.hy:tanki' \
                --add-data 'tanki/obstacles.hy;tanki' \
                --add-data 'tanki/ui.hy;tanki' \
                --add-data 'assets;assets' \
                --collect-all hyrule \
                --collect-all raylib \
                --collect-all pyray \
                tanki/__main__.py \
"""

[tool.poe.tasks.run-windows]
cmd = "build/windows/thetanki/thetanki"
